--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 		<div style="margin-top:10px" class="form-group">
 			<div class="col-sm-12 btn-group">
 				<input type="submit" value="Download" class="btn btn-default">
-				<button type="button" class="btn btn-default" data-toggle="modal" data-target="#seedModal">Seed</button>
-				
+				<button type="button" class="btn btn-default" onclick="window.open('seed.html', '_blank');">Seed</button>
 			</div>
 		</div>
 	</form>
