Improved animation on the footer. Renamed css file to fit conventions. Changed footer to variable, limited width rather than fixed.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="sticky-footer.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
   </head>
 
   <body>
