--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	  <!-- Include the latest version of WebTorrent-->
+	  <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
 	<script src="scripts/downloaded_list.js"></script>
 	
 	<meta charset="utf-8">
