Added support for previews and fixed a couple potential html building bugs.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 					fl();
 		</script>
 	-->
+	
+	<div id="ShowSpace"></div>
+	
 	<div class="footer navbar-fixed-bottom">
 		<div class="panel-group bottom0" id="accordion" role="tablist" aria-multiselectable="true">
 			<div class="panel panel-primary">
