--- a/seed.html
+++ b/seed.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Seeding...</title>
     <!-- General UI-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- More compact JS -->
@@ -9,11 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Include the latest version of WebTorrent-->
     <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
-    <!-- Copy to Clipboard -->
+    <!-- Copy to Clipboard-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js"></script>
-    <script src="scripts/seed.js"></script>
-    <meta charset="UTF-8">
-    <title>Seeding biatch</title>
 </head>
 <body>
 <div class="container">
@@ -45,5 +45,6 @@
         </div>
     </div>
 </div>
+<script src="scripts/seed.js"></script>
 </body>
 </html>
