--- a/seed.html
+++ b/seed.html
@@ -6,6 +6,7 @@
     <title>Seeding...</title>
     <!-- General UI-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
     <!-- More compact JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- General Bootstrap UI interaction-->
@@ -17,6 +18,7 @@
 </head>
 <body>
 <div class="container">
+    <div class="row">
     <!-- Torrent Link Panel -->
     <div id="selectbox" style="margin-top:50px;" class="col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0">
         <div class="panel panel-primary">
@@ -27,23 +29,32 @@
                 <div class="jumbotron" id="drop_zone">
                     <h3 class="text-center">Drag & Drop here</h3>
                 </div>
+                <!-- Files list-->
                 <output id="list"></output>
             </div>
-            <div class="panel-footer">
+            <div class="panel-footer" style="display:none;">
+                <!--<a href="#" target="_blank" id="uri" style="float:left; display:none;">[Magnet URI]</a>-->
+                    <div class="progress">
+                        <div id="upload-progress" class="progress-bar progress-bar-striped active" role="progressbar"
+                             aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                        </div>
+                    </div>
+                <button type="button" id="button_play" class="btn" onclick='buttonPlayPress()'>
+                    <i class="fa fa-play"></i>
+                </button>
+                <button type="button" id="button_stop" class="btn" onclick='buttonStopPress()'>
+                    <i class="fa fa-stop"></i>
+                </button>
                 <!-- Magnet URI -->
-                <input id="uri" style="float:left; display:none;" value="">
+                <input id="uri" value=""/>
                 <!-- Trigger -->
-                <button id="clip-btn" class="clip" style="float:left; display:none;" data-clipboard-target="#uri">
+                <button id="clip-btn" class="clip" data-clipboard-target="#uri">
                     <img src="" alt="Copy URI">
                 </button>
-                <!--<a href="#" target="_blank" id="uri" style="float:left; display:none;">[Magnet URI]</a>-->
-                <div id="upload-speed">
-                </div>
-                <div id="num-peers">
-                </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 <script src="scripts/seed.js"></script>
 </body>
