Change title of sticky footer (this could be changed, but something other than Notifications would be good).

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="panel panel-primary">
 				<div class="panel-heading" role="tab" id="headingOne" style="cursor: pointer" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 				  <h4 class="panel-title">
-									<i class="fa fa-info"></i>&nbsp;&nbsp;Notifications 
+									<i class="fa fa-info"></i>&nbsp;&nbsp;Files Downloading 
 								</h4>
 				</div>
 				<div id="collapseOne" class="panel-collapse collapse notifications-scroll-area" role="tabpanel" aria-labelledby="headingOne">
