Finally managed to get a main preview with a limited height.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</script>
 	-->
 	
-	<div id="ShowSpace"></div>
+	<div id="ShowSpace" style="max-height:400px;"></div>
 	
 	<div class="footer navbar-fixed-bottom">
 		<div class="panel-group bottom0" id="accordion" role="tablist" aria-multiselectable="true">
