Make previews bigger and centered

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
 					fl();
 		</script>
 	-->
-	
-	<div id="ShowSpace" style="max-height:400px;"></div>
-	
+	<div id="ShowSpace" class="col-lg-12 col-sm-12" style="text-align: center"></div>
 	<div class="footer navbar-fixed-bottom">
 		<div class="panel-group bottom0" id="accordion" role="tablist" aria-multiselectable="true">
 			<div class="panel panel-primary">
